[package]
name = "flowlapse"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"

